# RusticiProject_Executable

./: Cargo.toml  README.md  q_table.txt
src/: build_project.rs  main.rs  trainer.rs
src/visualizer_1/assets/audio/: tree.ogg.asd
src/visualizer_2/assets/editables/: bank.aseprite  bin.aseprite  building.aseprite  bush.aseprite  coin.aseprite  crate.aseprite  dumbo.aseprite  fire.aseprite  fish.aseprite  garabge.aseprite  market.aseprite  rock.aseprite  scarecrow.aseprite  todo.aseprite  tree.aseprite  water.aseprite
